testdata/baselines/reference/submodule/compiler/isolatedDeclarationsAddUndefined.errors.txt
file1.ts(3,5): error TS9012: Property must have an explicit type annotation with --isolatedDeclarations.
file1.ts(4,5): error TS9012: Property must have an explicit type annotation with --isolatedDeclarations.
file1.ts(6,5): error TS9012: Property must have an explicit type annotation with --isolatedDeclarations.
file2.ts(1,21): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file2.ts(1,26): error TS9025: Declaration emit for this parameter requires implicitly adding undefined to its type. This is not supported with --isolatedDeclarations.
file2.ts(4,22): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file2.ts(4,27): error TS9025: Declaration emit for this parameter requires implicitly adding undefined to its type. This is not supported with --isolatedDeclarations.
file2.ts(7,5): error TS9012: Property must have an explicit type annotation with --isolatedDeclarations.


==== file1.ts (3 errors) ====
    type N = 1;
    export class Bar {
        c? = [2 as N] as const;
        ~
!!! error TS9012: Property must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9029 file1.ts:3:5: Add a type annotation to the property c.
        c3? = 1 as N;
        ~~
!!! error TS9012: Property must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9029 file1.ts:4:5: Add a type annotation to the property c3.
        readonly r = 1;
        f = 2;
        ~
!!! error TS9012: Property must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9029 file1.ts:6:5: Add a type annotation to the property f.
    }
    
==== file2.ts (5 errors) ====
    export function foo(p = (ip = 10, v: number): void => {}): void{
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9028 file2.ts:1:21: Add a type annotation to the parameter p.
!!! related TS9035 file2.ts:1:21: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
                             ~~~~~~~
!!! error TS9025: Declaration emit for this parameter requires implicitly adding undefined to its type. This is not supported with --isolatedDeclarations.
!!! related TS9028 file2.ts:1:26: Add a type annotation to the parameter ip.
    }
    type T = number
    export function foo2(p = (ip = 10 as T, v: number): void => {}): void{}
                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9028 file2.ts:4:22: Add a type annotation to the parameter p.
!!! related TS9035 file2.ts:4:22: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
                              ~~~~~~~~~~~~
!!! error TS9025: Declaration emit for this parameter requires implicitly adding undefined to its type. This is not supported with --isolatedDeclarations.
!!! related TS9028 file2.ts:4:27: Add a type annotation to the parameter ip.
    export class Bar2 {
        readonly r = 1;
        f = 2;
        ~
!!! error TS9012: Property must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9029 file2.ts:7:5: Add a type annotation to the property f.
    }